# the-back-test

./: .gitignore  README.md  pyproject.toml
the_back_test/: core.py
the_back_test/exchanges/: binanceExc.py  exchangeManager.py
the_back_test/operation/: operationManager.py
the_back_test/plot/: plot.py
the_back_test/strategy/: default.py  strategyManager.py
the_back_test/ta/: SMI.py  supertrend.py  technicalAnalisis.py
