[tool.poetry]
name = "the-back-test"
version = "0.1.0"
description = ""
authors = ["Alejandro Rodriguez Rodriguez <alejandro.rodriguez.rodriguez.contractor@bbva.com>"]
readme = "README.md"
packages = [{include = "the_back_test"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
requests = "^2.31.0"
plotly = "^5.16.1"
finta = "^1.3"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
